--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1 style="text-align: center;">নামাজ সম্পর্কিত কিছু হাদিস</h1>
     
       
-<form action="file:///C:/Users/HP/OneDrive/Desktop/project/form-add/full%20project/index.html" mathed="pest">
+<form action=" https://jkkamalbhai.github.io/frined-project/" mathed="pest">
     <fieldset>
         <legend><h3>Login Please</h3></legend>
     <label for="nam">Frist Name :</label>
